--- a/index.html
+++ b/index.html
@@ -14,181 +14,183 @@
 <body>
 <div class="page">
     <div class="container">
-        <div class="content">
-            <div class="tab-wrapper po-re">
-                <ul class="tabs flex">
-                    <li class="bgred">
-                        咪咪脱毛
-                    </li>
-                    <li class="bgblue">
-                        光知美
-                    </li>
-                    <li class="bggreen">
-                        丝客富
-                    </li>
-                    <li class="bgblack">
-                        文小姐
-                    </li>
-                </ul>
-                <div class="tabers">
-                    <div class="taber bgred">
-                        <img src="img/taber1.png" alt="" class="tab-bg"/>
-                        <div class="card">
-                            <div class="head">
-                                <img src="" alt="">
-                            </div>
-                            <div class="flex member-info">
-                                <div class="code">
-                                    <img src="img/code.png" alt="">
-                                    <p>我的二维码</p>
+        <div class="wrapper">
+            <div class="content">
+                <div class="tab-wrapper po-re">
+                    <ul class="tabs flex">
+                        <li class="bgred">
+                            咪咪脱毛
+                        </li>
+                        <li class="bgblue">
+                            光知美
+                        </li>
+                        <li class="bggreen">
+                            丝客富
+                        </li>
+                        <li class="bgblack">
+                            文小姐
+                        </li>
+                    </ul>
+                    <div class="tabers">
+                        <div class="taber bgred">
+                            <img src="img/taber1.png" alt="" class="tab-bg"/>
+                            <div class="card">
+                                <div class="head">
+                                    <img src="" alt="">
                                 </div>
-                                <div class="member">
-                                    <div class="stretch-height po-re">
-                                        <p class="big member-grade">
-                                            会员等级
-                                            <span class="grade">V</span>
-                                        </p>
-                                        <p class="card-number clearfix">
-                                            <span class="pull-left">卡号</span>
-                                            <span class="pull-right">000002</span>
-                                        </p>
+                                <div class="flex member-info">
+                                    <div class="code">
+                                        <img src="img/code.png" alt="">
+                                        <p>我的二维码</p>
                                     </div>
-                                    <p>加入时间：2017-01-01</p>
+                                    <div class="member">
+                                        <div class="stretch-height po-re">
+                                            <p class="big member-grade">
+                                                会员等级
+                                                <span class="grade">V</span>
+                                            </p>
+                                            <p class="card-number clearfix">
+                                                <span class="pull-left">卡号</span>
+                                                <span class="pull-right">000002</span>
+                                            </p>
+                                        </div>
+                                        <p>加入时间：2017-01-01</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="taber bgblue">
+                            <img src="img/taber2.png" alt="" class="tab-bg"/>
+                            <div class="card">
+                                <div class="head">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="flex member-info">
+                                    <div class="code">
+                                        <img src="img/code.png" alt="">
+                                        <p>我的二维码</p>
+                                    </div>
+                                    <div class="member">
+                                        <div class="stretch-height po-re">
+                                            <p class="big member-grade">
+                                                会员等级
+                                                <span class="grade">V</span>
+                                            </p>
+                                            <p class="card-number clearfix">
+                                                <span class="pull-left">卡号</span>
+                                                <span class="pull-right">000002</span>
+                                            </p>
+                                        </div>
+                                        <p>加入时间：2017-01-01</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="taber bggreen">
+                            <img src="img/taber3.png" alt="" class="tab-bg"/>
+                            <div class="card">
+                                <div class="head">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="flex member-info">
+                                    <div class="code">
+                                        <img src="img/code.png" alt="">
+                                        <p>我的二维码</p>
+                                    </div>
+                                    <div class="member">
+                                        <div class="stretch-height po-re">
+                                            <p class="big member-grade">
+                                                会员等级
+                                                <span class="grade">V</span>
+                                            </p>
+                                            <p class="card-number clearfix">
+                                                <span class="pull-left">卡号</span>
+                                                <span class="pull-right">000002</span>
+                                            </p>
+                                        </div>
+                                        <p>加入时间：2017-01-01</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="taber bgblack">
+                            <img src="img/taber4.png" alt="" class="tab-bg"/>
+                            <div class="card">
+                                <div class="head">
+                                    <img src="" alt="">
+                                </div>
+                                <div class="flex member-info">
+                                    <div class="code">
+                                        <img src="img/code.png" alt="">
+                                        <p>我的二维码</p>
+                                    </div>
+                                    <div class="member">
+                                        <div class="stretch-height po-re">
+                                            <p class="big member-grade">
+                                                会员等级
+                                                <span class="grade">V</span>
+                                            </p>
+                                            <p class="card-number clearfix">
+                                                <span class="pull-left">卡号</span>
+                                                <span class="pull-right">000002</span>
+                                            </p>
+                                        </div>
+                                        <p>加入时间：2017-01-01</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="taber bgblue">
-                        <img src="img/taber2.png" alt="" class="tab-bg"/>
-                        <div class="card">
-                            <div class="head">
-                                <img src="" alt="">
-                            </div>
-                            <div class="flex member-info">
-                                <div class="code">
-                                    <img src="img/code.png" alt="">
-                                    <p>我的二维码</p>
-                                </div>
-                                <div class="member">
-                                    <div class="stretch-height po-re">
-                                        <p class="big member-grade">
-                                            会员等级
-                                            <span class="grade">V</span>
-                                        </p>
-                                        <p class="card-number clearfix">
-                                            <span class="pull-left">卡号</span>
-                                            <span class="pull-right">000002</span>
-                                        </p>
-                                    </div>
-                                    <p>加入时间：2017-01-01</p>
-                                </div>
-                            </div>
-                        </div>
+                    <!--<div class="tab-crash"></div>-->
+                </div>
+                <div class="nav-links">
+                    <div class="flex line1">
+                        <a href="##"></a>
+                        <a href="##"></a>
+                        <a href="##"></a>
+                        <a href="##"></a>
                     </div>
-                    <div class="taber bggreen">
-                        <img src="img/taber3.png" alt="" class="tab-bg"/>
-                        <div class="card">
-                            <div class="head">
-                                <img src="" alt="">
-                            </div>
-                            <div class="flex member-info">
-                                <div class="code">
-                                    <img src="img/code.png" alt="">
-                                    <p>我的二维码</p>
-                                </div>
-                                <div class="member">
-                                    <div class="stretch-height po-re">
-                                        <p class="big member-grade">
-                                            会员等级
-                                            <span class="grade">V</span>
-                                        </p>
-                                        <p class="card-number clearfix">
-                                            <span class="pull-left">卡号</span>
-                                            <span class="pull-right">000002</span>
-                                        </p>
-                                    </div>
-                                    <p>加入时间：2017-01-01</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="taber bgblack">
-                        <img src="img/taber4.png" alt="" class="tab-bg"/>
-                        <div class="card">
-                            <div class="head">
-                                <img src="" alt="">
-                            </div>
-                            <div class="flex member-info">
-                                <div class="code">
-                                    <img src="img/code.png" alt="">
-                                    <p>我的二维码</p>
-                                </div>
-                                <div class="member">
-                                    <div class="stretch-height po-re">
-                                        <p class="big member-grade">
-                                            会员等级
-                                            <span class="grade">V</span>
-                                        </p>
-                                        <p class="card-number clearfix">
-                                            <span class="pull-left">卡号</span>
-                                            <span class="pull-right">000002</span>
-                                        </p>
-                                    </div>
-                                    <p>加入时间：2017-01-01</p>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="flex line2">
+                        <a href="##"></a>
+                        <a href="##"></a>
+                        <a href="##"></a>
+                        <a href="##"></a>
                     </div>
                 </div>
-                <!--<div class="tab-crash"></div>-->
-            </div>
-            <div class="nav-links">
-                <div class="flex line1">
-                    <a href="##"></a>
-                    <a href="##"></a>
-                    <a href="##"></a>
-                    <a href="##"></a>
-                </div>
-                <div class="flex line2">
-                    <a href="##"></a>
-                    <a href="##"></a>
-                    <a href="##"></a>
-                    <a href="##"></a>
-                </div>
-            </div>
-            <div class="recommends">
-                <p>为你推荐</p>
-                <div class="swiper">
-                    <div class="swiper-container" id="swiper-recommend">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <a href="##">
-                                    <img src="img/slider-1.png" alt="" width="100%;"/>
-                                </a>
+                <div class="recommends">
+                    <p>为你推荐</p>
+                    <div class="swiper">
+                        <div class="swiper-container" id="swiper-recommend">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <a href="##">
+                                        <img src="img/slider-1.png" alt="" width="100%;"/>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="##">
+                                        <img src="img/slider-1.png" alt="" width="100%;"/>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="##">
+                                        <img src="img/slider-1.png" alt="" width="100%;"/>
+                                    </a>
+                                </div>
                             </div>
-                            <div class="swiper-slide">
-                                <a href="##">
-                                    <img src="img/slider-1.png" alt="" width="100%;"/>
-                                </a>
-                            </div>
-                            <div class="swiper-slide">
-                                <a href="##">
-                                    <img src="img/slider-1.png" alt="" width="100%;"/>
-                                </a>
-                            </div>
+                            <div class="swiper-pagination"></div>
                         </div>
-                        <div class="swiper-pagination"></div>
                     </div>
+                    <a href="##">
+                        <img src="img/recommend-2.png" alt="">
+                    </a>
+                    <a href="##">
+                        <img src="img/recommend-3.png" alt="">
+                    </a>
+                    <a href="##">
+                        <img src="img/recommend-4.png" alt="">
+                    </a>
                 </div>
-                <a href="##">
-                    <img src="img/recommend-2.png" alt="">
-                </a>
-                <a href="##">
-                    <img src="img/recommend-3.png" alt="">
-                </a>
-                <a href="##">
-                    <img src="img/recommend-4.png" alt="">
-                </a>
             </div>
         </div>
     </div>
