--- a/index.html
+++ b/index.html
@@ -16,124 +16,136 @@
     <div class="content">
                 <div class="tab-wrapper po-re">
                     <ul class="tabs flex">
-                        <li class="bgred">
+                        <li class="bgred tab1">
                             咪咪脱毛
                         </li>
-                        <li class="bgblue">
+                        <li class="bgblue tab2">
                             光知美
                         </li>
-                        <li class="bggreen">
+                        <li class="bggreen tab3">
                             丝客富
                         </li>
-                        <li class="bgblack">
+                        <li class="bgblack tab4">
                             文小姐
                         </li>
                     </ul>
                     <div class="tabers">
-                        <div class="taber bgred">
-                            <img src="img/taber1.png" alt="" class="tab-bg"/>
-                            <div class="card">
-                                <div class="head">
-                                    <img src="" alt="">
-                                </div>
-                                <div class="flex member-info">
-                                    <div class="code">
-                                        <img src="img/code.png" alt="">
-                                        <p>我的二维码</p>
-                                    </div>
-                                    <div class="member">
-                                        <div class="stretch-height po-re">
-                                            <p class="big member-grade">
-                                                会员等级
-                                                <span class="grade">V</span>
-                                            </p>
-                                            <p class="card-number clearfix">
-                                                <span class="pull-left">卡号</span>
-                                                <span class="pull-right">000002</span>
-                                            </p>
+                        <div class="swiper-container" id="tab-slider">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="taber bgred">
+                                        <img src="img/taber1.png" alt="" class="tab-bg"/>
+                                        <div class="card">
+                                            <div class="head">
+                                                <img src="" alt="">
+                                            </div>
+                                            <div class="flex member-info">
+                                                <div class="code">
+                                                    <img src="img/code.png" alt="">
+                                                    <p>我的二维码</p>
+                                                </div>
+                                                <div class="member">
+                                                    <div class="stretch-height po-re">
+                                                        <p class="big member-grade">
+                                                            会员等级
+                                                            <span class="grade">V</span>
+                                                        </p>
+                                                        <p class="card-number clearfix">
+                                                            <span class="pull-left">卡号</span>
+                                                            <span class="pull-right">000002</span>
+                                                        </p>
+                                                    </div>
+                                                    <p>加入时间：2017-01-01</p>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <p>加入时间：2017-01-01</p>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="taber bgblue">
-                            <img src="img/taber2.png" alt="" class="tab-bg"/>
-                            <div class="card">
-                                <div class="head">
-                                    <img src="" alt="">
-                                </div>
-                                <div class="flex member-info">
-                                    <div class="code">
-                                        <img src="img/code.png" alt="">
-                                        <p>我的二维码</p>
-                                    </div>
-                                    <div class="member">
-                                        <div class="stretch-height po-re">
-                                            <p class="big member-grade">
-                                                会员等级
-                                                <span class="grade">V</span>
-                                            </p>
-                                            <p class="card-number clearfix">
-                                                <span class="pull-left">卡号</span>
-                                                <span class="pull-right">000002</span>
-                                            </p>
+                                <div class="swiper-slide">
+                                    <div class="taber bgblue">
+                                        <img src="img/taber2.png" alt="" class="tab-bg"/>
+                                        <div class="card">
+                                            <div class="head">
+                                                <img src="" alt="">
+                                            </div>
+                                            <div class="flex member-info">
+                                                <div class="code">
+                                                    <img src="img/code.png" alt="">
+                                                    <p>我的二维码</p>
+                                                </div>
+                                                <div class="member">
+                                                    <div class="stretch-height po-re">
+                                                        <p class="big member-grade">
+                                                            会员等级
+                                                            <span class="grade">V</span>
+                                                        </p>
+                                                        <p class="card-number clearfix">
+                                                            <span class="pull-left">卡号</span>
+                                                            <span class="pull-right">000002</span>
+                                                        </p>
+                                                    </div>
+                                                    <p>加入时间：2017-01-01</p>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <p>加入时间：2017-01-01</p>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="taber bggreen">
-                            <img src="img/taber3.png" alt="" class="tab-bg"/>
-                            <div class="card">
-                                <div class="head">
-                                    <img src="" alt="">
-                                </div>
-                                <div class="flex member-info">
-                                    <div class="code">
-                                        <img src="img/code.png" alt="">
-                                        <p>我的二维码</p>
-                                    </div>
-                                    <div class="member">
-                                        <div class="stretch-height po-re">
-                                            <p class="big member-grade">
-                                                会员等级
-                                                <span class="grade">V</span>
-                                            </p>
-                                            <p class="card-number clearfix">
-                                                <span class="pull-left">卡号</span>
-                                                <span class="pull-right">000002</span>
-                                            </p>
+                                <div class="swiper-slide">
+                                    <div class="taber bggreen">
+                                        <img src="img/taber3.png" alt="" class="tab-bg"/>
+                                        <div class="card">
+                                            <div class="head">
+                                                <img src="" alt="">
+                                            </div>
+                                            <div class="flex member-info">
+                                                <div class="code">
+                                                    <img src="img/code.png" alt="">
+                                                    <p>我的二维码</p>
+                                                </div>
+                                                <div class="member">
+                                                    <div class="stretch-height po-re">
+                                                        <p class="big member-grade">
+                                                            会员等级
+                                                            <span class="grade">V</span>
+                                                        </p>
+                                                        <p class="card-number clearfix">
+                                                            <span class="pull-left">卡号</span>
+                                                            <span class="pull-right">000002</span>
+                                                        </p>
+                                                    </div>
+                                                    <p>加入时间：2017-01-01</p>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <p>加入时间：2017-01-01</p>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="taber bgblack">
-                            <img src="img/taber4.png" alt="" class="tab-bg"/>
-                            <div class="card">
-                                <div class="head">
-                                    <img src="" alt="">
-                                </div>
-                                <div class="flex member-info">
-                                    <div class="code">
-                                        <img src="img/code.png" alt="">
-                                        <p>我的二维码</p>
-                                    </div>
-                                    <div class="member">
-                                        <div class="stretch-height po-re">
-                                            <p class="big member-grade">
-                                                会员等级
-                                                <span class="grade">V</span>
-                                            </p>
-                                            <p class="card-number clearfix">
-                                                <span class="pull-left">卡号</span>
-                                                <span class="pull-right">000002</span>
-                                            </p>
+                                <div class="swiper-slide">
+                                    <div class="taber bgblack">
+                                        <img src="img/taber4.png" alt="" class="tab-bg"/>
+                                        <div class="card">
+                                            <div class="head">
+                                                <img src="" alt="">
+                                            </div>
+                                            <div class="flex member-info">
+                                                <div class="code">
+                                                    <img src="img/code.png" alt="">
+                                                    <p>我的二维码</p>
+                                                </div>
+                                                <div class="member">
+                                                    <div class="stretch-height po-re">
+                                                        <p class="big member-grade">
+                                                            会员等级
+                                                            <span class="grade">V</span>
+                                                        </p>
+                                                        <p class="card-number clearfix">
+                                                            <span class="pull-left">卡号</span>
+                                                            <span class="pull-right">000002</span>
+                                                        </p>
+                                                    </div>
+                                                    <p>加入时间：2017-01-01</p>
+                                                </div>
+                                            </div>
                                         </div>
-                                        <p>加入时间：2017-01-01</p>
                                     </div>
                                 </div>
                             </div>
