--- a/index.html
+++ b/index.html
@@ -168,16 +168,16 @@
         </div>
         <div class="nav-links">
             <div class="flex line1">
-                <a href="##"></a>
-                <a href="##"></a>
-                <a href="##"></a>
-                <a href="##"></a>
+                <a href="appointment.html"></a>
+                <a href="mall.html"></a>
+                <a href="treatment.html"></a>
+                <a href="coupon.html"></a>
             </div>
             <div class="flex line2">
                 <a href="##"></a>
                 <a href="##"></a>
                 <a href="##"></a>
-                <a href="##"></a>
+                <a href="setting.html"></a>
             </div>
         </div>
         <div class="recommends">
