--- a/setting.html
+++ b/setting.html
@@ -53,7 +53,7 @@
                 </ul>
             </div>
             <div class="card-footer">
-                <a href="##" class="button external setting-btn">提交</a>
+                <a href="javascript:;" class="button external setting-btn">提交</a>
             </div>
         </div>
         <div class="card setting-card setting-card2">
@@ -67,7 +67,7 @@
                         <div class="setting-label">旧密码</div>
                         <div class="inputs-control flex ver-stretch her-stretch">
                             <label>
-                                <input type="text" placeholder="填写旧密码"/>
+                                <input type="password" placeholder="填写旧密码"/>
                             </label>
                         </div>
                     </li>
@@ -75,7 +75,7 @@
                         <div class="setting-label">新密码</div>
                         <div class="inputs-control flex ver-stretch her-stretch">
                             <label>
-                                <input type="text" placeholder="填写新密码"/>
+                                <input type="password" placeholder="填写新密码"/>
                             </label>
                         </div>
                     </li>
@@ -83,14 +83,14 @@
                         <div class="setting-label">确认密码</div>
                         <div class="inputs-control flex ver-stretch her-stretch">
                             <label>
-                                <input type="text" placeholder="确认新密码"/>
+                                <input type="password" placeholder="确认新密码"/>
                             </label>
                         </div>
                     </li>
                 </ul>
             </div>
             <div class="card-footer">
-                <a href="##" class="button external setting-btn">提交</a>
+                <a href="javascript:;" class="button external setting-btn">提交</a>
             </div>
         </div>
     </div>
@@ -130,10 +130,6 @@
                 }
             ]
         });
-
-
-
-
     })(jQuery);
 </script>
 </body>
