--- a/SIGNUP/index.html
+++ b/SIGNUP/index.html
@@ -10,7 +10,7 @@
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css"/>
-    <title>安仁乐道</title>
+    <title>闺蜜推荐 畅享优惠</title>
 </head>
 <body>
 <div class="page index">
@@ -21,16 +21,16 @@
             <p class="rule-item">转发“闺蜜券”给微信好友（非会员），即可获得50积分，每月转发上限4条（最多获取200积分）。</p>
             <p class="rule-item">凭“闺蜜券”入店的新会员，入店即可获得500积分，如当日消费，推荐人与被推荐人，均可获得积分。</p>
             <div class="index-links flex her-stretch">
-                <a href="javascript:;" class="index-link link1">
+                <a href="mm.html" class="index-link link1">
                     <p>全国特惠</p>
                 </a>
-                <a href="javascript:;" class="index-link link2">
+                <a href="sxb.html" class="index-link link2">
                     <p>西安特惠</p>
                 </a>
-                <a href="javascript:;" class="index-link link3">
+                <a href="skf.html" class="index-link link3">
                     <p>西安特惠</p>
                 </a>
-                <a href="javascript:;" class="index-link link4">
+                <a href="wxj.html" class="index-link link4">
                     <p>西安特惠</p>
                 </a>
             </div>
